<resources>
    <string name="app_name">HTML Realizer</string>
    <string name="inf_title1">Usage</string>
    <string name="inf_text1">Enter HTML code, then tap \"OK.\" The code will be turned into styled text.</string>
    <string name="inf_text2">The text can then be edited or copied.</string>
    <string name="inf_text3">However, the style might not be retained if you paste it somewhere else. Whether or how it is kept depends on how much the other app allows/supports it.</string>
    <string name="inf_title2">Source code</string>
    <string name="inf_text4">The source code of this app is available at https://github.com/sls1005/HTMLRealizer, under the MIT license.</string>
    <string name="inf_button1">Show open-source libraries</string>
    <string name="lic_title_1">Licenses</string>
</resources>